--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 261,
-   "id": "4f1ece74",
+   "id": "d9c88a5b",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "464970a3",
+   "id": "5546d9e9",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "ac9a71a3",
+   "id": "7f32a8f9",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "b390a087",
+   "id": "1d3e4920",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "id": "6c2d879c",
+   "id": "94307467",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "ab23870f",
+   "id": "2403efd0",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "id": "c4472e61",
+   "id": "d302725e",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "id": "18cdbb3b",
+   "id": "a0082b0c",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "id": "753f4d49",
+   "id": "0a5be2d9",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 271,
-   "id": "c3a8a767",
+   "id": "3b805b04",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 272,
-   "id": "17a1f491",
+   "id": "45d26c69",
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "id": "419a63eb",
+   "id": "ed9c3769",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 274,
-   "id": "de136797",
+   "id": "42b82051",
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "id": "1ec2e720",
+   "id": "eba8cfd3",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "id": "874246d1",
+   "id": "ae9cc8e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 277,
-   "id": "f7d829f4",
+   "id": "31015937",
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "id": "b09ec955",
+   "id": "be50318f",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 279,
-   "id": "a311a0b2",
+   "id": "f5391634",
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "id": "53f380a6",
+   "id": "1ff92bb5",
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "id": "47166265",
+   "id": "a2a1b40f",
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "id": "710ebb04",
+   "id": "6296d2a3",
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": 283,
-   "id": "f13cad25",
+   "id": "c8b5a029",
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 284,
-   "id": "f54869be",
+   "id": "415d4ead",
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": 285,
-   "id": "ee01634a",
+   "id": "4160d444",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 286,
-   "id": "4e2e9449",
+   "id": "63f1444c",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "id": "8662e932",
+   "id": "e1bad7de",
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": 288,
-   "id": "7d98a94d",
+   "id": "bf7247ec",
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 289,
-   "id": "5dd167da",
+   "id": "1c82b27e",
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
   {
    "cell_type": "code",
    "execution_count": 290,
-   "id": "2295c4d2",
+   "id": "77363735",
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1941,7 @@
   {
    "cell_type": "code",
    "execution_count": 291,
-   "id": "a007ac65",
+   "id": "874cfa7f",
    "metadata": {},
    "outputs": [
     {
@@ -1976,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "id": "f13351bd",
+   "id": "00392ec9",
    "metadata": {},
    "outputs": [
     {
@@ -2118,7 +2118,7 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "id": "e832f24a",
+   "id": "4b56a66f",
    "metadata": {},
    "outputs": [
     {
@@ -2259,7 +2259,7 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "id": "26aecfbd",
+   "id": "5294337a",
    "metadata": {},
    "outputs": [
     {
@@ -2298,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "id": "aa552f2d",
+   "id": "2ae1ae35",
    "metadata": {},
    "outputs": [
     {
@@ -2336,7 +2336,7 @@
   {
    "cell_type": "code",
    "execution_count": 296,
-   "id": "794e8495",
+   "id": "4c9683fa",
    "metadata": {},
    "outputs": [
     {
@@ -2375,7 +2375,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "57ddd9b9",
+   "id": "76ee1128",
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2412,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "8193c230",
+   "id": "f77ff153",
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 299,
-   "id": "876684a8",
+   "id": "223bfdc2",
    "metadata": {},
    "outputs": [
     {
@@ -2591,7 +2591,7 @@
   {
    "cell_type": "code",
    "execution_count": 304,
-   "id": "1d46bb22",
+   "id": "c93d8ed2",
    "metadata": {},
    "outputs": [
     {
@@ -2629,7 +2629,7 @@
   {
    "cell_type": "code",
    "execution_count": 305,
-   "id": "613fffcb",
+   "id": "13dbdeaf",
    "metadata": {},
    "outputs": [
     {
@@ -2783,7 +2783,7 @@
   {
    "cell_type": "code",
    "execution_count": 306,
-   "id": "d3f17515",
+   "id": "96339774",
    "metadata": {},
    "outputs": [
     {
@@ -2931,19 +2931,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b639df0b",
+   "execution_count": 309,
+   "id": "59f45f7a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 309,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "95992989",
+   "execution_count": 311,
+   "id": "c1760180",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 311,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
   }
  ],
  "metadata": {
