--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 261,
-   "id": "d2ae5c66",
+   "id": "225b2d44",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "5de04fea",
+   "id": "0510e685",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "35d4e05c",
+   "id": "bd06458f",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "1c99ce97",
+   "id": "897574aa",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "id": "920e7d7a",
+   "id": "7dea8ceb",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "04b31a01",
+   "id": "b9160342",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "id": "1f530903",
+   "id": "1723f8ba",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "id": "78cff9f9",
+   "id": "c89de027",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "id": "ab076362",
+   "id": "588b2620",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 271,
-   "id": "c25bbbe4",
+   "id": "4e1f56aa",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 272,
-   "id": "7754585a",
+   "id": "452d21bf",
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "id": "b99516e3",
+   "id": "920ea1b6",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 274,
-   "id": "22c49909",
+   "id": "0cced657",
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "id": "02c2e842",
+   "id": "db79205e",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "id": "d7f66e7c",
+   "id": "7c47ab36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 277,
-   "id": "1abba0a6",
+   "id": "4e732f0e",
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "id": "68990201",
+   "id": "994e3577",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 279,
-   "id": "c3803079",
+   "id": "34bdfb4a",
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "id": "7d3de4ac",
+   "id": "0f5c454d",
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "id": "9f08623f",
+   "id": "dd6047ab",
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "id": "fde33fe9",
+   "id": "c9a97c84",
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": 283,
-   "id": "87676512",
+   "id": "abb46f28",
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 284,
-   "id": "4fade42e",
+   "id": "5fd6c642",
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": 285,
-   "id": "8cf99d61",
+   "id": "129d6e29",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 286,
-   "id": "1c07d7e8",
+   "id": "1b75b219",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "id": "d3893089",
+   "id": "7c16c188",
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": 288,
-   "id": "f7d17acf",
+   "id": "4e8dcf17",
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 289,
-   "id": "21829a91",
+   "id": "c00b214f",
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
   {
    "cell_type": "code",
    "execution_count": 290,
-   "id": "013c427b",
+   "id": "04ef84a5",
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1941,7 @@
   {
    "cell_type": "code",
    "execution_count": 291,
-   "id": "3dd34850",
+   "id": "1f088acb",
    "metadata": {},
    "outputs": [
     {
@@ -1976,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "id": "e0ca4b69",
+   "id": "746b2bd1",
    "metadata": {},
    "outputs": [
     {
@@ -2118,7 +2118,7 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "id": "cdbaa977",
+   "id": "feb1411d",
    "metadata": {},
    "outputs": [
     {
@@ -2259,7 +2259,7 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "id": "5ac1c767",
+   "id": "5ce6232d",
    "metadata": {},
    "outputs": [
     {
@@ -2298,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "id": "1818ddd9",
+   "id": "99afb857",
    "metadata": {},
    "outputs": [
     {
@@ -2336,7 +2336,7 @@
   {
    "cell_type": "code",
    "execution_count": 296,
-   "id": "b26c6e3c",
+   "id": "d23f8023",
    "metadata": {},
    "outputs": [
     {
@@ -2375,7 +2375,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "2360d571",
+   "id": "3a2c3f56",
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2412,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "478e17b6",
+   "id": "00da75db",
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 299,
-   "id": "96051d5f",
+   "id": "5d4920c6",
    "metadata": {},
    "outputs": [
     {
@@ -2591,7 +2591,7 @@
   {
    "cell_type": "code",
    "execution_count": 304,
-   "id": "884e1f44",
+   "id": "2ada24c7",
    "metadata": {},
    "outputs": [
     {
@@ -2629,7 +2629,7 @@
   {
    "cell_type": "code",
    "execution_count": 305,
-   "id": "0d7c3f85",
+   "id": "17570c01",
    "metadata": {},
    "outputs": [
     {
@@ -2783,7 +2783,7 @@
   {
    "cell_type": "code",
    "execution_count": 306,
-   "id": "0753698d",
+   "id": "117aa112",
    "metadata": {},
    "outputs": [
     {
@@ -2932,7 +2932,7 @@
   {
    "cell_type": "code",
    "execution_count": 309,
-   "id": "f5dba409",
+   "id": "20f9d74e",
    "metadata": {},
    "outputs": [
     {
@@ -3077,7 +3077,7 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "id": "0afed3d7",
+   "id": "deeeaaa0",
    "metadata": {},
    "outputs": [
     {
@@ -3222,7 +3222,7 @@
   {
    "cell_type": "code",
    "execution_count": 314,
-   "id": "1ddc796b",
+   "id": "edc51fcc",
    "metadata": {},
    "outputs": [
     {
@@ -3371,7 +3371,7 @@
   {
    "cell_type": "code",
    "execution_count": 316,
-   "id": "da35dc9a",
+   "id": "45046be2",
    "metadata": {},
    "outputs": [
     {
@@ -3417,7 +3417,7 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "id": "09838842",
+   "id": "770812c5",
    "metadata": {},
    "outputs": [
     {
@@ -3463,7 +3463,7 @@
   {
    "cell_type": "code",
    "execution_count": 320,
-   "id": "bab7a1ec",
+   "id": "6f500d9a",
    "metadata": {},
    "outputs": [
     {
@@ -3569,7 +3569,7 @@
   {
    "cell_type": "code",
    "execution_count": 321,
-   "id": "f351adc4",
+   "id": "7f21cc9a",
    "metadata": {},
    "outputs": [
     {
@@ -3675,7 +3675,7 @@
   {
    "cell_type": "code",
    "execution_count": 323,
-   "id": "2634b5b7",
+   "id": "a07f0d11",
    "metadata": {},
    "outputs": [
     {
@@ -3782,7 +3782,7 @@
   {
    "cell_type": "code",
    "execution_count": 324,
-   "id": "94badd1b",
+   "id": "e1c5d9ec",
    "metadata": {},
    "outputs": [
     {
@@ -3889,7 +3889,7 @@
   {
    "cell_type": "code",
    "execution_count": 325,
-   "id": "a3cd85f1",
+   "id": "68434a34",
    "metadata": {},
    "outputs": [
     {
@@ -3919,7 +3919,7 @@
   {
    "cell_type": "code",
    "execution_count": 326,
-   "id": "bffcb3c2",
+   "id": "95549656",
    "metadata": {},
    "outputs": [
     {
@@ -3958,7 +3958,7 @@
   {
    "cell_type": "code",
    "execution_count": 328,
-   "id": "b6acfd76",
+   "id": "db451dca",
    "metadata": {},
    "outputs": [
     {
@@ -3997,7 +3997,7 @@
   {
    "cell_type": "code",
    "execution_count": 330,
-   "id": "07b89016",
+   "id": "8bd095b2",
    "metadata": {},
    "outputs": [
     {
@@ -4024,7 +4024,7 @@
   {
    "cell_type": "code",
    "execution_count": 332,
-   "id": "325ddd6f",
+   "id": "a51968ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4036,7 +4036,7 @@
   {
    "cell_type": "code",
    "execution_count": 333,
-   "id": "95714c10",
+   "id": "99d7bfe9",
    "metadata": {},
    "outputs": [
     {
@@ -4374,7 +4374,7 @@
   {
    "cell_type": "code",
    "execution_count": 337,
-   "id": "326abc4d",
+   "id": "167753c4",
    "metadata": {},
    "outputs": [
     {
@@ -4410,7 +4410,7 @@
   {
    "cell_type": "code",
    "execution_count": 338,
-   "id": "c5b0a2e6",
+   "id": "27175e91",
    "metadata": {},
    "outputs": [
     {
@@ -4529,7 +4529,7 @@
   {
    "cell_type": "code",
    "execution_count": 339,
-   "id": "75d828b6",
+   "id": "bf2fbb6d",
    "metadata": {},
    "outputs": [
     {
@@ -4651,7 +4651,7 @@
   {
    "cell_type": "code",
    "execution_count": 340,
-   "id": "c9ff0f32",
+   "id": "ab52cc66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4663,7 +4663,7 @@
   {
    "cell_type": "code",
    "execution_count": 341,
-   "id": "2b76004d",
+   "id": "3837ee45",
    "metadata": {},
    "outputs": [
     {
@@ -4827,7 +4827,7 @@
   {
    "cell_type": "code",
    "execution_count": 342,
-   "id": "99fa2dc5",
+   "id": "f9088e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4846,7 +4846,7 @@
   {
    "cell_type": "code",
    "execution_count": 343,
-   "id": "43972707",
+   "id": "b6afbdf2",
    "metadata": {},
    "outputs": [
     {
@@ -4948,7 +4948,7 @@
   {
    "cell_type": "code",
    "execution_count": 344,
-   "id": "e1ca30f6",
+   "id": "0afb163a",
    "metadata": {},
    "outputs": [
     {
@@ -5052,32 +5052,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "065c373d",
+   "execution_count": 345,
+   "id": "2d8a83b8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "id": "74bf628a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 346,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
+   "id": "712c19b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 347,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7c9f73e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1b2d452",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7c53bc8",
+   "id": "31f7cde6",
    "metadata": {},
    "outputs": [],
    "source": []
